Fix for distorted images

--- a/www/css/ratchet.css
+++ b/www/css/ratchet.css
@@ -1696,3 +1696,23 @@ select {
 .table-heading {
     font-size: 25px;
 }
+.img-50px {
+    width: 50px;
+    height: 50px;
+}
+.img-100px {
+    width: 100px;
+    height: 100px;
+}
+.img-200px {
+    width: 200px;
+    height: 200px;
+}
+.crop-size {
+    height: 100%;
+    background-size: contain;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
